--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,7 @@
     <!-- Required for testing LDAP integration -->
     <apacheds.version>2.0.0-M21</apacheds.version>
     <ldap-api.version>1.0.0-M33</ldap-api.version>
+    <curator.version>2.7.1</curator.version>
 
     <!--
       Properties for the copyright header style checks. Modules that use the ASF header
