--- a/conf/livy.conf.template
+++ b/conf/livy.conf.template
@@ -121,20 +121,25 @@
 
 # If Livy can't find the yarn app within this max times, consider it lost.
 # livy.server.yarn.app-lookup.max-failed.times = 120
-# How often to poll yarn for the app id.
-# livy.server.yarn.app-lookup-interval = 1s
 # When the cluster is busy, we may fail to launch yarn app in app-lookup-timeout, then it would
 # cause session leakage, so we need to check session leakage.
 # How long to check livy session leakage.
 # livy.server.yarn.app-leakage.check-timeout = 600s
 # How often to check livy session leakage.
 # livy.server.yarn.app-leakage.check-interval = 60s
+
 # The size of thread pool to monitor all yarn apps.
 # livy.server.yarn.app-monitor.thread-pool.size = 4
+# How often thread monitor the YARN app.
+# livy.server.yarn.app-monitor.thread-interval = 5s
+# How often to check monitor thread block
+# livy.server.yarn.app-monitor.thread-block.check-interval = 10s
+# If some thread cost more than this config to monitor one app,
+# stop the monitor of the app which considered blocked.
+# livy.server.yarn.app-monitor.thread-block-timeout = 60s
+# If Livy can't monitor the yarn app successfully within this max times, consider the app failed.
+# livy.server.yarn.app-monitor.max-failed.times = 12
 
-# How often Livy polls YARN to refresh YARN app state.
-# livy.server.yarn.poll-interval = 5s
-#
 # Days to keep Livy server request logs.
 # livy.server.request-log-retain.days = 5
 
