--- a/conf/livy.conf.template
+++ b/conf/livy.conf.template
@@ -134,7 +134,7 @@
 
 # The policy of curator connecting to zookeeper.
 # For example, m, n means retry m times and the interval of retry is n milliseconds
-# livy.server.zk.retry-policy = 5,100
+# livy.server.zk.retry-policy =
 
 # The dir in zk to store the data about session.
 # livy.server.recovery.zk-state-store.key-prefix = livy
