--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -85,9 +85,9 @@
     </dependency>
 
     <dependency>
-      <groupId>com.ning</groupId>
+      <groupId>org.asynchttpclient</groupId>
       <artifactId>async-http-client</artifactId>
-      <version>1.9.38</version>
+      <version>2.10.1</version>
     </dependency>
 
     <dependency>
