--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,8 @@ cache:
     - $HOME/.m2
 
 install:
+  - sudo deb https://cloud.r-project.org/bin/linux/ubuntu xenial-cran35/
+  - sudo apt-get update
   - sudo apt-get -qq install r-base
   - sudo apt-get -qq install python3-pip python-dev
   - sudo apt-get -qq install libkrb5-dev
